--- a/cmake/CMakeLists.txt
+++ b/cmake/CMakeLists.txt
@@ -208,8 +208,8 @@ target_link_libraries(
         ${TARGET_LIBS_SBV}
 )
 
-# By default build type is set to Release
-set(CMAKE_BUILD_TYPE Release)
+# By default build type is set to Debug
+set(CMAKE_BUILD_TYPE Debug)
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fpic -fopenmp -O3")
 
 message(STATUS "Static build: ${STATIC_OCC_IFCOS}")
