--- a/cmake/CMakeLists.txt
+++ b/cmake/CMakeLists.txt
@@ -6,6 +6,9 @@ set(CMAKE_CXX_STANDARD_REQUIRED True)
 
 project(IFC2SB VERSION 1.0)
 
+# By default build type is set to Debug
+set(CMAKE_BUILD_TYPE Debug)
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -frounding-math -fpic -fopenmp -g -O0")
 set(CMAKE_VERBOSE_MAKEFILE ON)
 # FLAG for static OCC, IFCOS, QT5
 OPTION(STATIC_OCC_IFCOS "Build IFC2SB and SBV with static OCC, IFCOpenShell and QT5" OFF)
@@ -209,9 +212,7 @@ target_link_libraries(
         ${TARGET_LIBS_SBV}
 )
 
-# By default build type is set to Debug
-set(CMAKE_BUILD_TYPE Debug)
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fpic -fopenmp -g -O0")
+
 
 message(STATUS "Static build: ${STATIC_OCC_IFCOS}")
 message(STATUS "Build type: ${CMAKE_BUILD_TYPE}")
